test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-owned-from-oknil-nil.good
init-field-dflt-nonnil-owned-from-oknil-nil.chpl:8: error: Cannot initialize lhs of non-nilable type 'owned MyClass' from nil
